# Exercise

./: README.md
ex_1/: CMakeLists.txt
ex_1/src/: CMakeLists.txt  hello.cpp  usehello.cpp
ex_2/src/: CMakeLists.txt  rotation.cpp  useeigen.cpp
ex_3/: CMakeLists.txt
ex_3/src/: CMakeLists.txt  contast.cpp  draw_trajectory.cpp
ex_4/: CMakeLists.txt
ex_4/src/: CMakeLists.txt  disparity.cpp  gaussnewton.cpp  undistort_image.cpp
